# azmarks

./: .gitignore  README.md  config.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml
azmarks/: __main__.py  azure.py  config.py  main.py
azure_bookmarks_tool/: __main__.py  browser.py  main.py  transform.py
azure_bookmarks_tool/browsers/: safari.py
azure_bookmarks_tool/templates/: safari.html
tests/: test_config.yaml  test_main.py  test_transform.py
