[tool.poetry]
name = "azmarks"
version = "0.1.0"
description = "Generates a bookmarks file for Azure resources, organizing resource links for quick access and reference."
authors = ["Christopher Egebakken <christophere@ksat.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
azure-identity = "^1.19.0"
azure-mgmt-resource = "^23.1.1"
beautifulsoup4 = "^4.12.3"
click = "^8.2.1"
jinja2 = "^3.1.6"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^5.13.2"
pytest = "^8.3.3"

[tool.poetry.scripts]
azmarks = "azmarks.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
