[tool.poetry]
name = "azmarks"
version = "0.1.0"
description = "Generates a bookmarks file for Azure resources, organizing resource links for quick access and reference."
authors = ["chege"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
azure-identity = "^1.25.1"
azure-mgmt-resource = "^24.0.0"
beautifulsoup4 = "^4.14.2"
click = "^8.3.0"
jinja2 = "^3.1.6"
pyyaml = "^6.0.3"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
isort = "^7.0.0"
pytest = "^9.0.0"

[tool.poetry.scripts]
azmarks = "azmarks.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
